Add dynamic background for quanitities

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,6 +1,1 @@
-// Segment colors
-$primary-segment: #A5D49E;
-$secondary-segment: #9CB37F;
-$tertiary-segment: #522A28;
-$quaternary-segment: #C73E1C;
-$senary-segment: #C59749;
+$primary-white: #F8F8FF; // Ghost white
